fix: delete button in cart

--- a/apps/products/templates/products/personal_cart.html
+++ b/apps/products/templates/products/personal_cart.html
@@ -90,7 +90,13 @@
                 </div>
                 {% endfor %}
             {% else %}
-                <p class="text-center text-gray-500">Ваша корзина пуста</p>
+            <p class="text-center text-gray-500">Ваша корзина пуста</p>
+                <a href="{% url 'products:shop' %}">
+                    <div class="bg-white rounded-md overflow-hidden border-2 border-dashed border-gray-300 flex flex-col items-center justify-center h-64 cursor-pointer hover:bg-gray-50 transition-colors">
+                        <i class="fas fa-plus text-4xl text-gray-400 mb-2"></i>
+                        <p class="text-gray-500 font-medium">Добавить новый продукт</p>
+                    </div>
+                </a>
             {% endif %}
         </div>
         
