--- a/apps/products/templates/products/personal_my_products.html
+++ b/apps/products/templates/products/personal_my_products.html
@@ -23,11 +23,10 @@
 
         <!-- Существующие товары -->
         {% for item in user_products %}
-        <a href="{% url "products:products_detail" item.slug %}">
-
+        <a href="{% url 'products:products_detail' item.slug %}">
             <div class="flex flex-col justify-self-center items-start overflow-hidden">
-                {% if item.images %}
-                <img class="w-[240px] h-[350px] object-cover bg-gray-100" src="{{ item.images.0.url }}" alt="{{ item.title }}">
+                {% if item.get_main_image %}
+                <img class="w-[240px] h-[350px] object-cover bg-gray-100" src="{{ item.get_main_image.image.url }}" alt="{{ item.title }}">
                 {% else %}
                 <div class="w-[240px] h-[350px] bg-gray-100 flex items-center justify-center text-gray-500">
                     Нет изображения
@@ -38,11 +37,11 @@
                     <p class="text-[15px]">{{ item.name }}</p>
                 </div>
             </div>
-            {% empty %}
-            <div class="col-span-full text-center text-gray-500 py-8">
-                У вас пока нет добавленных товаров
-            </div>
         </a>
+        {% empty %}
+        <div class="col-span-full text-center text-gray-500 py-8">
+            У вас пока нет добавленных товаров
+        </div>
         {% endfor %}
     </div>
 </div>
