--- a/apps/products/templates/top_bar.html
+++ b/apps/products/templates/top_bar.html
@@ -6,13 +6,24 @@
 	<div class="flex justify-between items-center h-full pl-[5%] pr-[5%]">
 		<div class="text-[32px] font-{Arial}" style="font-family: Alata"><a href="{% url 'products:home' %}">Vivid</a></div>
 		<div class="flex flex-row items-center">
-			<div class="mr-10">
+			{% comment %} <div class="mr-10">
 				<input
 					type="search"
 					placeholder="Search..."
 					class="border-[0.8px] border-gray-300 text-[18px] pl-[5%] rounded-[10px] w-[380px] h-[40px]"
 				/>
-			</div>
+			</div> {% endcomment %}
+			<form method="get" action="{% url 'products:shop' %}">
+				<!-- Search input -->
+				<div class="search-container">
+					<input type="text" 
+						   name="q" 
+						   value="{{ search_query|default:'' }}" 
+						   placeholder="Search products by title..."
+						   class="border-[0.8px] border-gray-300 text-[18px] pl-[5%] rounded-[10px] w-[380px] h-[40px]">
+					{% comment %} <button type="submit">Search</button> {% endcomment %}
+				</div>
+			</form>
 
 			<div class="flex flex-row items-center gap-[50px] ml-10">
 				<a href="{% url 'products:register' %}">
