--- a/apps/products/templates/products/personal_cart.html
+++ b/apps/products/templates/products/personal_cart.html
@@ -122,7 +122,7 @@
                 </p>
                 
                 <a 
-                    {% comment %} href="{% url 'checkout:process' %}"  {% endcomment %}
+                    href="{% url 'payments:process' %}" 
                     class="w-full bg-black text-white hover:bg-gray-800 rounded py-3 mb-4 px-4 text-center inline-block"
                 >
                     Перейти к оформлению
