make payment workable

--- a/apps/products/templates/products/personal_cart.html
+++ b/apps/products/templates/products/personal_cart.html
@@ -122,7 +122,7 @@
                 </p>
                 
                 <a 
-                    href="{% url 'payments:process' %}" 
+                    href="{% url 'payments:create_order' %}" 
                     class="w-full bg-black text-white hover:bg-gray-800 rounded py-3 mb-4 px-4 text-center inline-block"
                 >
                     Перейти к оформлению
