--- a/apps/payments/templates/payments/success.html
+++ b/apps/payments/templates/payments/success.html
@@ -1,8 +1,9 @@
 <!-- payments/templates/payments/success.html -->
-{% extends "products/personal.html" %}
-{% block personal %}
+{% extends "base.html" %}
+{% block content %}
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-2xl font-bold">Thank You!</h1>
     <p>Your order has been successfully placed.</p>
+    <a href="{% url 'products:personal_cart' %}" class="text-blue-500">Back to Cart</a>
 </div>
 {% endblock %}
