--- a/apps/products/templates/products/Girlclothes.html
+++ b/apps/products/templates/products/Girlclothes.html
@@ -34,7 +34,7 @@
 		<span class="text-[20px]" style="font-family: Microsoft Sans Serif">Categories</span>
 		<div class="flex flex-row w-full justify-between gap-2.5">
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:shop' %}">
+				<a href="{% url 'products:shop' %}?gender=women">
 					<img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full" alt="T-shirt" />
 				</a>
 			</div>
